@@ -445,3 +445,4 @@ Version 1.6.0
 * Made the annotation function parallel
 * Improvements in speed and memory (constant memory use)
 * The STAR genome loading strategy can be now set
+* Added an affinity based method to cluster UMIs
